Optimising whole plugin and database queries